patch: fixed dropdown overflow; clickable toggle icon (#94)
* patch: fixed dropdown overflow; clickable toggle icon

* fix: select badge container closes dropdown

* fix: select component with scrollable area

--- a/packages/studiocms_ui/src/components/SearchSelect/searchselect.css
+++ b/packages/studiocms_ui/src/components/SearchSelect/searchselect.css
@@ -38,19 +38,26 @@
 .sui-search-select-dropdown {
 	position: absolute;
 	width: 100%;
+	top: calc(100% + 0.25rem);
+	left: 0;
+	display: none;
+	max-height: 300px;
 	border: 1px solid hsl(var(--border));
+	border-radius: var(--radius-md);
+	background-color: hsl(var(--background-step-2));
+	z-index: 90;
+	box-shadow: 0px 4px 8px hsl(var(--shadow), 0.5);
+	overflow: hidden;
+}
+
+.sui-search-select-dropdown-list {
+	width: 100%;
 	list-style: none;
 	margin: 0;
 	padding: 0;
 	flex-direction: column;
-	border-radius: var(--radius-md);
-	background-color: hsl(var(--background-step-2));
-	overflow: hidden;
-	top: calc(100% + 0.25rem);
-	left: 0;
-	display: none;
-	z-index: 90;
-	box-shadow: 0px 4px 8px hsl(var(--shadow), 0.5);
+	overflow-y: auto;
+	scrollbar-color: hsl(var(--border)) hsl(var(--background-step-2));
 }
 
 .sui-search-select-dropdown.above {
@@ -123,7 +130,6 @@
 	position: absolute;
 	bottom: .675rem;
 	right: .675rem;
-	pointer-events: none;
 }
 
 .sui-search-input-wrapper:has(input:focus) + .sui-search-select-dropdown {
