--- a/packages/studiocms_ui/src/components/Select/select.css
+++ b/packages/studiocms_ui/src/components/Select/select.css
@@ -82,19 +82,26 @@
 .sui-select-dropdown {
 	position: absolute;
 	width: 100%;
+	top: calc(100% + 0.25rem);
+	left: 0;
+	display: none;
+	max-height: 300px;
 	border: 1px solid hsl(var(--border));
+	border-radius: var(--radius-md);
+	background-color: hsl(var(--background-step-2));
+	z-index: 90;
+	box-shadow: 0px 4px 8px hsl(var(--shadow), 0.5);
+	overflow: hidden;
+}
+
+.sui-select-dropdown-list {
+	width: 100%;
 	list-style: none;
 	margin: 0;
 	padding: 0;
 	flex-direction: column;
-	border-radius: var(--radius-md);
-	background-color: hsl(var(--background-step-2));
-	overflow: hidden;
-	top: calc(100% + 0.25rem);
-	left: 0;
-	display: none;
-	z-index: 90;
-	box-shadow: 0px 4px 8px hsl(var(--shadow), 0.5);
+	overflow-y: auto;
+	scrollbar-color: hsl(var(--border)) hsl(var(--background-step-2));
 }
 
 .sui-select-dropdown.active {
